[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Graficos/Interfaz/MarioPlayerSelectScreen.jpg" type="Texture" id=1]
[ext_resource path="res://Recursos/Graficos/Interfaz/start button.png" type="Texture" id=2]
[ext_resource path="res://Codigos/Locales/Interfaz/PlayerSelect.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Graficos/Interfaz/icon.png" type="Texture" id=4]

[node name="PlayerSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 129.236, 226.236 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 855.8
margin_top = 535.77
margin_right = 1012.8
margin_bottom = 583.77
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonajeA" type="TextureButton" parent="."]
margin_left = 186.0
margin_top = 158.0
margin_right = 338.0
margin_bottom = 318.0

[node name="PersonajeA2" type="TextureButton" parent="."]
margin_left = 366.184
margin_top = 180.034
margin_right = 491.184
margin_bottom = 301.034
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonajeA3" type="TextureButton" parent="."]
margin_left = 533.496
margin_top = 179.788
margin_right = 658.496
margin_bottom = 300.788

[node name="PersonajeA4" type="TextureButton" parent="."]
margin_left = 699.698
margin_top = 180.238
margin_right = 824.698
margin_bottom = 301.238

[node name="PersonajeA5" type="TextureButton" parent="."]
margin_left = 202.184
margin_top = 387.224
margin_right = 327.184
margin_bottom = 508.224
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonajeA6" type="TextureButton" parent="."]
margin_left = 366.294
margin_top = 383.656
margin_right = 491.294
margin_bottom = 504.656

[node name="PersonajeA7" type="TextureButton" parent="."]
margin_left = 532.783
margin_top = 386.035
margin_right = 657.783
margin_bottom = 507.035

[node name="PersonajeA8" type="TextureButton" parent="."]
margin_left = 700.461
margin_top = 381.278
margin_right = 825.461
margin_bottom = 502.278

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="PersonajeA" to="." method="_on_PersonajeA_pressed"]
[connection signal="pressed" from="PersonajeA2" to="." method="_on_PersonajeA2_pressed"]
[connection signal="pressed" from="PersonajeA3" to="." method="_on_PersonajeA3_pressed"]
[connection signal="pressed" from="PersonajeA4" to="." method="_on_PersonajeA4_pressed"]
[connection signal="pressed" from="PersonajeA5" to="." method="_on_PersonajeA5_pressed"]
[connection signal="pressed" from="PersonajeA6" to="." method="_on_PersonajeA6_pressed"]
[connection signal="pressed" from="PersonajeA7" to="." method="_on_PersonajeA7_pressed"]
[connection signal="pressed" from="PersonajeA8" to="." method="_on_PersonajeA8_pressed"]
